[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "ncolor"
requires-python = ">=3.10"
dynamic = ["version", "description", "readme", "authors", "classifiers", "dependencies", "optional-dependencies", "license"]

[project.scripts]
# Add entry point if any; otherwise, leave empty
# ncolor = "ncolor.__main__:main"

[tool.setuptools_scm]
write_to = "src/ncolor/_version.py"
# Avoid date-stamped local versions (post-commit dev tags) in built wheels —
# PyPI rejects "+local" version suffixes anyway.
local_scheme = "no-local-version"

[tool.cibuildwheel]
# Supported stable CPython versions. Bump as new ones land / EOLs roll off.
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
# Skip musl Linux (no numba wheel for musllinux at time of writing).
skip = ["*-musllinux*"]
# build is the modern PEP 517 frontend (replaces legacy setup.py bdist_wheel).
build-frontend = "build"
# Build-time env: skip the SMT calibration (the cache it writes is host-
# specific and would bake the build-host's calibration into the wheel),
# and turn off -march=native so wheels are portable across CPU vintages.
environment = { NCOLOR_NO_CALIBRATE = "1", NCOLOR_MARCH_NATIVE = "0" }
# Smoke-test each wheel inside the cibuildwheel container.
# scipy / scikit-image / fastremap are pulled in so the parity-vs-
# skimage tests actually run on every wheel build (they auto-skip
# without these deps via the ``needs_skimage_ref`` markers).
test-requires = ["pytest", "scipy", "scikit-image", "fastremap"]
test-command = "pytest -q {project}/tests"

[tool.cibuildwheel.macos]
# Match the floor in setup.py's -mmacosx-version-min so the wheel tag and
# the actual binary agree.
environment = { NCOLOR_NO_CALIBRATE = "1", NCOLOR_MARCH_NATIVE = "0", MACOSX_DEPLOYMENT_TARGET = "10.14" }

[tool.cibuildwheel.windows]
# arm64 build doesn't have CPython 3.10 wheels available; cibuildwheel
# already picks the Python versions it can find — leaving this here in
# case we need to override per-arch later.

[tool.pytest.ini_options]
testpaths = ["tests", "test_files"]

[tool.coverage.run]
# Measure only the tracked package modules. _version.py is autogenerated
# by setuptools_scm, and the label_current/label_experimental_* files are
# untracked scratch/debug code, not part of the shipped package.
source = ["ncolor"]
omit = [
    "*/_version.py",
    "*/label_current.py",
    "*/label_experimental_*.py",
]
branch = false
parallel = true